--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Slack API token (get from Slack App)
 SLACK_TOKEN=your-slack-token-here
+
+# Slack Signing Secret (get from Slack App)
+SLACK_SIGNING_SECRET=your-slack-signing-secret-here
