--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ SLACK_TOKEN=your-slack-token-here
 
 # Slack Signing Secret (get from Slack App)
 SLACK_SIGNING_SECRET=your-slack-signing-secret-here
+
+# OpenAI API Key
+OPENAI_API_KEY=your-openai-api-key-here
